--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology in Computer Science & Engineering (CGPA 7.1)</span></li>
 									<li class="d-flex"><span>Languages:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>Programming:</span> <span>C, C++, MERN Stack, SQL, PHP</span></li>
-									<li class="d-flex"><span>Data Science Skills:</span> <span>Descriptive Analysis, Exploratory Data Analysis, Predictive Analysis</span></li>
+									<!-- <li class="d-flex"><span>Data Science Skills:</span> <span>Descriptive Analysis, Exploratory Data Analysis, Predictive Analysis</span></li> -->
 									<li class="d-flex"><span>Technologies:</span> <span>React JS, Express JS, MongoDB, MySQL</span></li>
 									<li class="d-flex"><span>Certifications:</span> <span>NPTEL (C Programming, Modern CPP), Web Development Workshop, Hackathons</span></li>
-									<li class="d-flex"><span>Machine Learning Tools:</span> <span>scikit-learn, OpenCV</span></li>
-									<li class="d-flex"><span>Databases:</span> <span>SQL, MongoDB</span></li>
-									<li class="d-flex"><span>Cloud Computing:</span> <span>Familiar with cloud platforms and deployment practices</span></li>
+									<!-- <li class="d-flex"><span>Machine Learning Tools:</span> <span>scikit-learn, OpenCV</span></li> -->
+									<!-- <li class="d-flex"><span>Databases:</span> <span>SQL, MongoDB</span></li> -->
+									<!-- <li class="d-flex"><span>Cloud Computing:</span> <span>Familiar with cloud platforms and deployment practices</span></li> -->
 									<li class="d-flex"><span>Tools:</span> <span>Git, GitHub, VS Code</span></li>
 									<li class="d-flex"><span>Hackathon Achievements:</span> <span>SISTec Innovation Hackathon (Rank 5), JLU Hackathon (Rank 3)</span></li>
 									<li class="d-flex"><span>Key Projects:</span> <span>Management Information System for Police</span></li>
