--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+	<link rel="icon" type="image" href="images/favicon.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
 	<!-- <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css"> -->
@@ -282,9 +284,14 @@
 							<div class="lottie-container">
 								<dotlottie-player
 									src="https://lottie.host/76859292-cc6b-462f-b1d6-6c9bbd64ec19/NcanRQwcTr.lottie"
-									background="transparent" speed="1" style="width: 700px; height: 600px;" loop
-									autoplay></dotlottie-player>
+									background="transparent" 
+									speed="1" 
+									style="width: 100%; height: 100%;" 
+									loop 
+									autoplay>
+								</dotlottie-player>
 							</div>
+							
 
 							<div class="overlay"></div>
 						</div>
