--- a/index.html
+++ b/index.html
@@ -284,6 +284,134 @@
 			position: relative;
 			z-index: 1;
 		}
+
+		.chatbot-container {
+			position: fixed;
+			bottom: 20px;
+			right: 20px;
+			width: 350px;
+			background: white;
+			border-radius: 10px;
+			box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+			display: none;
+			flex-direction: column;
+			overflow: hidden;
+			z-index: 999999;
+		}
+
+		.chat-header {
+			background: #000;
+			color: white;
+			padding: 10px;
+			text-align: center;
+			font-size: 18px;
+		}
+
+		.close-btn {
+			background: none;
+			border: none;
+			color: white;
+			font-size: 20px;
+			font-weight: bold;
+			cursor: pointer;
+			position: absolute;
+			right: 10px;
+			transition: transform 0.3s ease-in-out, color 0.3s;
+		}
+
+		.close-btn:hover {
+			transform: translateX(1px);
+			/* Slight slide effect */
+			color: red;
+			/* Highlight on hover */
+		}
+
+		.chat-body {
+			max-height: 400px;
+			overflow-y: auto;
+			padding: 10px;
+		}
+
+		.chat-message {
+			margin: 8px 0;
+			padding: 8px;
+			border-radius: 8px;
+			width: fit-content;
+			max-width: 80%;
+			clear: both;
+		}
+
+		.bot-message {
+			background: #ddd;
+			color: #121212;
+			float: left;
+		}
+
+		.user-message {
+			background: #000;
+			color: white;
+			float: right;
+		}
+
+		.chat-footer {
+			display: flex;
+			padding: 10px;
+			border-top: 1px solid #ccc;
+		}
+
+		.chat-footer input {
+			flex-grow: 1;
+			padding: 8px;
+			border: none;
+			border-bottom: 2px solid #000;
+			outline: none;
+		}
+
+		.chat-footer button {
+			background: #000;
+			color: white;
+			border: none;
+			padding: 8px 12px;
+			cursor: pointer;
+		}
+
+		@keyframes floatUpDown {
+			0% {
+				transform: translateY(0px);
+			}
+
+			50% {
+				transform: translateY(-10px);
+			}
+
+			100% {
+				transform: translateY(0px);
+			}
+		}
+
+		/* Chatbot Toggle Button */
+		.chat-toggle {
+			position: fixed;
+			bottom: 50px;
+			right: 10px;
+			border: none;
+			padding: 10px;
+			cursor: pointer;
+			font-size: 16px;
+			z-index: 99999;
+			background: none;
+			transition: transform 0.3s ease, box-shadow 0.3s ease;
+			animation: floatUpDown 2s infinite ease-in-out;
+			/* Continuous animation */
+		}
+
+		.chat-toggle-logo {
+			width: 100px;
+			height: 120px;
+			background: none;
+			margin-right: 80px;
+			transition: transform 0.3s ease, filter 0.3s ease;
+		}
 	</style>
 
 
@@ -1123,6 +1251,26 @@
 			</div>
 	</section>
 
+	<section>
+		<button class="chat-toggle" onclick="toggleChat()">
+			<img class="chat-toggle-logo" src="./images/chatbot-logo.png" alt="">
+		</button>
+	
+		<div class="chatbot-container" id="chatbot">
+			<div class="chat-header">Chatter Box!
+				<span class="close-btn" onclick="closeChat()">X</span>
+			</div>
+			<div class="chat-body" id="chat-body">
+				<div class="chat-message bot-message">Hello! I'm Nishant...</div>
+			</div>
+			<div class="chat-footer">
+				<input id="chat-input" type="text" placeholder="Type a message...">
+				<button onclick="sendMessage()">Send</button>
+			</div>
+		</div>
+	</section>
+	
+
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
@@ -1163,18 +1311,56 @@
 	<script src="js/jquery.animateNumber.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
 	<script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
-	<script type="module">
-		src = "https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
-		window.onload = function () {
-			renderDocsGPTWidget("app", {
-				apiKey: "a4558c46-c1ce-4a6e-a713-f0ab315ea7df",
-				avatar: 'images/hrs.png',
-				size: "medium",
-				description: "Hrithik's clone",
-				heroTitle: "Hey there...",
-				heroDescription: 'Thanks for landing here. I am a digital twin of Nishant Jhade, feel free to ask any questions.',
-			});
-		};
+
+	<script>
+		function toggleChat() {
+			const chat = document.getElementById("chatbot");
+			chat.style.display = chat.style.display === "flex" ? "none" : "flex";
+		}
+
+		function closeChat() {
+			document.getElementById("chatbot").style.display = "none";
+		}
+
+		async function sendMessage() {
+			const inputField = document.getElementById("chat-input");
+			let input = inputField.value.trim();
+			if (input === "") return;
+
+			addChat("user", input);
+			inputField.value = "";
+
+			try {
+				const response = await fetch("https://myportfolio-chatbot.onrender.com", {
+					method: "POST",
+					headers: { "Content-Type": "application/json" },
+					body: JSON.stringify({ question: input })
+				});
+
+				if (!response.ok) {
+					throw new Error(`Server Error: ${response.statusText}`);
+				}
+
+				const data = await response.json();
+				addChat("bot", data.response || "I'm here to help!");
+			} catch (error) {
+				console.error("Error communicating with chatbot:", error);
+				addChat("bot", "Sorry, I couldn't process that. Try again.");
+			}
+		}
+
+		function addChat(sender, message) {
+			const chatBody = document.getElementById("chat-body");
+			const messageDiv = document.createElement("div");
+			messageDiv.classList.add("chat-message", sender === "user" ? "user-message" : "bot-message");
+			messageDiv.textContent = message;
+			chatBody.appendChild(messageDiv);
+			chatBody.scrollTop = chatBody.scrollHeight;
+		}
+
+		document.getElementById("chat-input").addEventListener("keypress", function (event) {
+			if (event.key === "Enter") sendMessage();
+		});
 	</script>
 
 	<!-- <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script> -->
