--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
 			inputField.value = "";
 
 			try {
-				const response = await fetch("https://myportfolio-chatbot.onrender.com", {
+				const response = await fetch("https://myportfolio-chatbot.onrender.com/chat", {
 					method: "POST",
 					headers: { "Content-Type": "application/json" },
 					body: JSON.stringify({ question: input })
