resume and porfile photo updated

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 			padding-top: 4rem;
 			padding-bottom: 4rem;
 		}
+		.about-img{
+			min-width: 205px ;
+			min-height: 205px ;
+		}
 
 		.about-mf .about-img {
 			margin-bottom: 2rem;
@@ -533,7 +537,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="about-img">
-											<img src="images/hrs.jpeg" class="img-fluid b-shadow-a rounded-full" alt="">
+											<img src="images/profile2.png" class="img-fluid b-shadow-a rounded-full" alt="">
 										</div>
 									</div>
 									<!-- Details next to profile image -->
@@ -828,7 +832,7 @@
 
 		<div class="row justify-content-center mt-5">
 			<div class="col-md-6 text-center ftco-animate">
-				<p><a href="Nishants-resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+				<p><a href="Nishant_Jhade_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
 			</div>
 		</div>
 		</div>
@@ -882,8 +886,8 @@
 							<img src="images/Nishant/jplppl.png" alt="JPL-PPL Project">
 						</a>
 						<div class="project-content">
-							<h3><a href="https://github.com/nishant-x">JPL-PPL</a></h3>
-							<p>Organized coding competitions with real-time compilers and MCQ integration using MERN
+							<h3><a href="https://github.com/nishant-x">Coding Ka Cricket</a></h3>
+							<p>Organized coding competitions in college with real-time compilers and MCQ integration using MERN
 								Stack.</p>
 						</div>
 					</div>
