--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 										<div class="about-img">
-											<img src="images/profile2.png" class="img-fluid b-shadow-a rounded-full" alt="">
+											<img src="images/profileimg2.jpg" class="img-fluid b-shadow-a rounded-full" alt="">
 										</div>
 									</div>
 									<!-- Details next to profile image -->
